--- a/myproject/base/templates/base/home.html
+++ b/myproject/base/templates/base/home.html
@@ -3,19 +3,59 @@
 
 {% block content %}
 
+<style>
+    .home-container{
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
+</style>
+
+
 <h1>HOME</h1>
 
-<div>
-    <div>
-        {% for room in rooms %}
+<div class = "home-container">
 
+    <div>
+        <h3>Browse Topics</h3>
+        <hr>
+
+        <div>
+            <a href="{% url 'home' %}">All Topics</a>
+        </div>
+
+        {% for topic in topics %}
             <div>
-                <h4> {{ room.id }} -- <a href="{% url 'room' room.id %}">{{ room.name }}</a> </h4>
+                <a href="{% url 'home'%}?q={{topic.name}}">{{topic.name}}</a>
             </div>
+
 
         {% endfor %}
 
+
     </div>
+
+
+    <div>
+        <h5>{{room_count}} room(s) available</h5>
+        <a href="{% url 'create-room'%}"> Create Room</a>
+
+        <hr>
+
+        <div>
+            {% for room in rooms %}
+
+                <div>
+                    <a href="{% url 'update-room' room.id %}">Edit</a>
+                    <a href="{% url 'delete-room' room.id%}">Delete</a>
+                    <span>@{{room.host.username}}</span>
+                    <h4> {{ room.id }} -- <a href="{% url 'room' room.id %}">{{ room.name }}</a> </h4>
+                    <small>{{room.topic.name}}</small>
+                    <hr>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
 
 </div>
 
